# Added Helix Text Editor

--- a/home-manager/modules/dotfiles/i3.conf
+++ b/home-manager/modules/dotfiles/i3.conf
@@ -2,8 +2,9 @@
 # i3 configuration file
 # created by : C0SM0
 
-# wallpaper
+# wallpaper and Display settings
 set $wallpaper $HOME/Pictures/Wallpapers/Garage.jpg
+exec_always --no-startup-id $HOME/nixConfigs/home-manager/modules/scripts/display.sh
 exec_always --no-startup-id feh --bg-fill $wallpaper
 
 # variables
