# Added NeoVim and Tweaked i3

--- a/home-manager/modules/dotfiles/i3.conf
+++ b/home-manager/modules/dotfiles/i3.conf
@@ -4,7 +4,7 @@
 
 # wallpaper and Display settings
 set $wallpaper $HOME/Pictures/Wallpapers/Garage.jpg
-exec_always --no-startup-id $HOME/nixConfigs/home-manager/modules/scripts/display.sh
+exec $HOME/nixConfigs/home-manager/modules/scripts/display.sh
 exec_always --no-startup-id feh --bg-fill $wallpaper
 
 # variables
