# Tweaks + Added Ghostty

--- a/home-manager/modules/dotfiles/i3.conf
+++ b/home-manager/modules/dotfiles/i3.conf
@@ -2,9 +2,10 @@
 # i3 configuration file
 # created by : C0SM0
 
-# wallpaper and Display settings
+# wallpaper, display, and keyboard setup
 set $wallpaper $HOME/Pictures/Wallpapers/Garage.jpg
 exec $HOME/nixConfigs/home-manager/modules/scripts/display.sh
+exec $HOME/nixConfigs/home-manager/modules/scripts/remapkeys.sh
 exec_always --no-startup-id feh --bg-fill $wallpaper
 
 # variables
