--- a/home-manager/modules/dotfiles/i3.conf
+++ b/home-manager/modules/dotfiles/i3.conf
@@ -2,11 +2,15 @@
 # i3 configuration file
 # created by : C0SM0
 
-# wallpaper, display, and keyboard setup
+# set monitors
+bindsym $alt+0 exec autorandr --load ExternalOnly && i3-msg restart
+
+# wallpaper
 set $wallpaper $HOME/Pictures/Wallpapers/Garage.jpg
-exec $HOME/nixConfigs/home-manager/modules/scripts/display.sh
-exec $HOME/nixConfigs/home-manager/modules/scripts/remapkeys.sh
 exec_always --no-startup-id feh --bg-fill $wallpaper
+
+# keyboard
+exec $HOME/nixConfigs/home-manager/modules/scripts/remapkeys.sh
 
 # variables
 set $alt Mod1
