# More Personal Tweaks

--- a/home-manager/modules/dotfiles/i3.conf
+++ b/home-manager/modules/dotfiles/i3.conf
@@ -59,10 +59,10 @@ bindsym $win+space exec rofi -show drun
 bindsym $alt+Shift+r restart 
 
 # window management
-bindsym $alt+h focus left
-bindsym $alt+j focus down
-bindsym $alt+k focus up
-bindsym $alt+l focus right
+#bindsym $alt+h focus left
+#bindsym $alt+j focus down
+#bindsym $alt+k focus up
+#bindsym $alt+l focus right
 bindsym $alt+Shift+h move left
 bindsym $alt+Shift+j move down
 bindsym $alt+Shift+k move up
